# IFMO-FP-2016

./: README.md
cw2/: cw2.cabal
cw2/.stack-work/install/x86_64-linux/lts-7.8/8.0.1/flag-cache/: cw2-0.1.0.0  monad-loops-0.4.3-1xZFtRVMQPC4X8bjTBWqNi
cw2/src/: Main.hs
extra/: flycheck_CartesianTree.hs
hw1/: README.md  task1.hs  task2.hs  task3.hs
hw2/: task1.hs  task2.hs  task3.hs
hw3/: hw3.cabal
hw3/hw3/src/: flycheck_Main.hs
hw3/src/: Coin.hs  Main.hs  Map.hs  Set.hs  Tree.hs  task1.hs  task2.hs
hw5/: AParser.hs  SExpr.hs
hw6/: hw6.cabal
hw6/src/: Eval.hs  Main.hs  Tree.hs  task1.hs  test.hs
hw7/: file.conf  hw7.cabal  qq.conf  test1.conf  zzz.xxx
hw7/src/: Task1.hs
hw8/: hw8.cabal  test.conf
hw8/src/: Main.hs  Task1.hs  Task2.hs  Task3.hs
hw9/: hw9.cabal
